[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/pickups/player_magnet.gd" type="Script" id=1]
[ext_resource path="res://src/pickups/gun_effect.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/seed.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/texture/gun.png" type="Texture" id=4]
[ext_resource path="res://src/gamemode/single_room/pickup.gd" type="Script" id=5]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=6]
[ext_resource path="res://src/color/palette.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/pickups/gun_addon.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=5]
radius = 64.0

[sub_resource type="CircleShape2D" id=4]
radius = 5.09902

[sub_resource type="Image" id=11]
data = {
"data": PoolByteArray( 0, 0, 0, 255, 68, 0, 0, 255, 255, 0, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 3
}

[sub_resource type="ImageTexture" id=10]
flags = 0
flags = 0
image = SubResource( 11 )
size = Vector2( 3, 1 )

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/palette_size = 3
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 10 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "play"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, -2 ) ]
}

[node name="gun" type="Area2D" groups=["seed"]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 5 )

[node name="player_magnet" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_magnet"]
shape = SubResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
lifetime = 2.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="palette" parent="Sprite" instance=ExtResource( 7 )]
palette = PoolColorArray( 0, 0, 0, 1, 0.266667, 0, 0, 1, 1, 0, 0, 1 )
material = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "play"
anims/RESET = SubResource( 2 )
anims/play = SubResource( 3 )

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="effect" type="Node" parent="."]
script = ExtResource( 2 )
GUN = ExtResource( 8 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="picked_up" from="." to="effect" method="apply"]
